# C-_Lateral_Vehicle_Dynamics

./: .gitignore
LateralDynamics/: .gitignore  CMakeLists.txt  ControlBlock.cpp  ControlBlock.hpp  ControlBlockSystem.cpp  ControlBlockSystem.hpp  Dynamics.cpp  Dynamics.hpp  HelperFunctions.cpp  HelperFunctions.hpp  KDTree.cpp  KDTree.hpp  LPVBlock.cpp  LPVBlock.hpp  LTIBlock.cpp  LTIBlock.hpp  Models.cpp  Models.hpp  NumericalMethods.cpp  NumericalMethods.hpp  Polynomial.cpp  Polynomial.hpp  README.md  SharedStructs.h  SimulateSystem.cpp  SimulateSystem.hpp  SimulatedSystem.hpp  StateSpaceBlock.cpp  StateSpaceBlock.hpp  Vehicle.cpp  Vehicle.hpp  build.sh  configure.sh  main.cpp  vcpkg-configuration.json  vcpkg.json
LateralDynamics.xcodeproj/: project.pbxproj
LateralDynamics.xcodeproj/project.xcworkspace/xcuserdata/niran.xcuserdatad/: UserInterfaceState.xcuserstate
LateralDynamics.xcodeproj/xcuserdata/niran.xcuserdatad/xcschemes/: xcschememanagement.plist
LateralDynamics/graphs/: data.csv  plot.py
LateralDynamics/input_sequence/: input_sequence_generator.py
